--- a/css/main.css
+++ b/css/main.css
@@ -1,81 +1,98 @@
-body{
+body {
+background-color: #252323;
 width: 100%;
 height: 100%;
 margin: 0 auto;
 }
+
 ul {
-padding: 0px!important;
+   padding: 0px!important; 
 }
-.menu-principal{
+
+.menu-principal {
 width: 100%;
 background-color: #252323;
 height: 60px;
 }
-main{
+
+main, .content {
 margin: 0 auto;
 width: 980px;
 position: relative;
 }
-.logo{
-float:  left;
-padding: 16px;
-width:  70%;
+
+.logo {
+ float: left;
+ padding: 16px;
+ width: 70%;
 }
-.header1-right ul li{
-margin-left: 16px;
+
+.redes-sociais ul li {
+margin-left: 25px;
 display: inline-block;
+float: left;
 list-style: none;
 }
-.header1-right ul li a{
+
+.redes-sociais ul li a{
 color: #8b8b8b;
 text-decoration: none;
 font-size: 20px;
 text-transform: capitalize;
 }
-.header1-right{
-width: 24%;
+
+.redes-sociais {
+width: 25%;
 float: right;
 }
-.header-2{
-background-color: #ffffff;
+
+.header-2 {
+/*background-color: #ffffff;*/
 width: 980px;
 margin: 0 auto;
-padding: 4px;
+padding: 16px;
 }
-.menu-urls{
-height: 60px;
-border-bottom: 3px solid #efefef;  
+
+.menu-urls {
+height: 80px;
+border-bottom: 3px solid #efefef;
 }
-.menu ul li{
+
+.menu ul li {
 display: inline-block;
 color: #8b8b8b;
 margin-left: 15px;
-height: 40px;
-}
-.menu ul li:hover{
-border-bottom: 2px solid #00bac6;
-}
-.menu ul li a:hover{
-color: #00bac6;
 height: 50px;
 }
-.menu ul li a{
+
+.menu ul li:hover {
+border-bottom: 3px solid #00bac6;
+}
+
+.menu ul li a:hover {
+color: #00bac6;
+}
+
+.menu ul li a {
 color: #8b8b8b;
 text-decoration: none;
-font-size: 20px;
-text-transform: capitalize;
+font-size: 18px;
+text-transform: uppercase;
 }
-.menu{
-float:  left;
-width:  70%; 
+
+.menu {
+width: 70%;
+float: left;
 }
-.busca{
+
+.busca {
 text-align: center;
-width:  30%;
-float:  right;
+width: 30%;
+float: right;
 }
-.busca input{
-background-image: url('../img/icone-search.png');
+
+.busca input {
+background-image: url(../img/icone-search.png);
 background-repeat: no-repeat;
 height: 20px;
 padding: 5px;
@@ -84,56 +101,136 @@ margin-top: 11px;
 background-position: 96%;
 border: 1px solid #d6d6d6;
 }
-.col-100{
-width:100%;
-text-align: left;
+
+.col-100 {
+width: 100%;
 float: left;
 position: relative;
 }
 
-.main-div{
-width:100%;
-height: 700px; 
-background-color: #8d3636;
-justify-content: center;
+.texto-destaque {
+margin-top: 100px;
 text-align: center;
-display: inline-block;
-position: relative;
 }
 
-.main-txt{
-background-color: #00bac6;
-position: relative;
-display: flex;
-flex-direction: column;
-align-items: center;
-margin-top: 25vh;
-height: 150px;
-width: 100%;
+.texto-destaque strong {
+color: #646464;
 }
 
-.dino-text {
-margin: 0 auto;
-font-size: 92px;
-line-height: 98px;
+.texto-destaque h1 {
 text-transform: uppercase;
-color: rgb(10, 109, 43);
+font-size: 30px;
+color: #818181;
 }
-.dino-slogan {
-margin: 0 auto;
-font-size: 24px;
+
+.texto-destaque p {
+font-size: 15px;
+color: #9a9a9a;
+}
+
+.col-3 {
 text-align: center;
-font-family: Inter;
-letter-spacing: .5px;
-color: rgb(10, 109, 43);
+padding-left: 15px;
+padding-right: 15px; 
+width: 29%;
+float: left;
+position: relative;
 }
+
+.bloco-texto {
+margin-top: 10em;
+}
+
 .invite-text{
 font-size: 24px;
 text-transform: uppercase;
 color: #fff;
 text-decoration: none;
 }
-footer{
-background: #050b06;
-height: 118px;
+
+.col-3 img{
+cursor: pointer;
+}
+
+.col-2 {
+float: left;
+width: 25%;
+text-align: center;
+}
+
+.col-2 img {
+cursor: pointer;
+margin: 0 auto;
+padding-top: 1em;
+vertical-align: middle;
+}
+
+.col-2 img:hover {
+margin-top: 10px!important;
+position: relative!important;
+}
+
+h3 {
+font-weight: normal!important;
+}
+
+.col-4 {
+float: left;
+width: 25%;
+text-align: left;
+}
+
+.col-4 img {
+cursor: pointer;
+margin: 0 auto;
+padding-top: 4em;
+vertical-align: middle;
+/*mudar a posição do paddin para 4 ou menos*/
+}
+
+.footer h3 {
+text-align: left;
+}
+
+.footer {
+background-image: url('../img/footer.png');
+color: #ffffff;
+}
+
+.footer-2 {
+background-image: url('../img/footer2.png');
+color: #c1c1c1;
+height: 5px;
+}
+
+
+.footer p {
+width: 90%;
+text-align: left;
+}
+
+.footer-2 p {
+padding: 10px;
+}
+
+.local:before, .emailico:before, .telefoneico:before {
+content: '';
+width:  17px;
+height: 24px;
+display: inline-block;
+float: left;
+background-repeat: no-repeat;
+padding-left: 5px;
+}
+
+.local:before {
+background-image: url('../img/local.png');
+} 
+
+.emailico:before {
+background-image: url('../img/emailico.png');
+} 
+ 
+.telefoneico:before {
+background-image: url('../img/telefoneico.png');
 }
