--- a/css/main.css
+++ b/css/main.css
@@ -1,236 +1,121 @@
-body {
-background-color: #252323;
-width: 100%;
-height: 100%;
-margin: 0 auto;
+body{
+font-family: 'Anton', sans-serif;
+color: #ffffff;
+background-color: #21211e;
 }
 
-ul {
-   padding: 0px!important; 
-}
-
-.menu-principal {
-width: 100%;
-background-color: #252323;
-height: 60px;
-}
-
-main, .content {
-margin: 0 auto;
-width: 980px;
-position: relative;
-}
-
-.logo {
- float: left;
- padding: 16px;
- width: 70%;
-}
-
-.redes-sociais ul li {
-margin-left: 25px;
-display: inline-block;
-float: left;
-list-style: none;
-}
-
-.redes-sociais ul li a{
-color: #8b8b8b;
-text-decoration: none;
-font-size: 20px;
-text-transform: capitalize;
-}
-
-.redes-sociais {
-width: 25%;
-float: right;
-}
-
-.header-2 {
-/*background-color: #ffffff;*/
-width: 980px;
-margin: 0 auto;
-padding: 16px;
-}
-
-.menu-urls {
-height: 80px;
-border-bottom: 3px solid #efefef;
-}
-
-.menu ul li {
-display: inline-block;
-color: #8b8b8b;
-margin-left: 15px;
-height: 50px;
-}
-
-.menu ul li:hover {
-border-bottom: 3px solid #00bac6;
-}
-
-.menu ul li a:hover {
-color: #00bac6;
-}
-
-.menu ul li a {
-color: #8b8b8b;
-text-decoration: none;
-font-size: 18px;
-text-transform: uppercase;
-}
-
-.menu {
-width: 70%;
-float: left;
-}
-
-.busca {
-text-align: center;
-width: 30%;
-float: right;
-}
-
-.busca input {
-background-image: url(../img/icone-search.png);
-background-repeat: no-repeat;
-height: 20px;
-padding: 5px;
-width: 170px;
-margin-top: 11px;
-background-position: 96%;
-border: 1px solid #d6d6d6;
-}
-
-.col-100 {
-width: 100%;
-float: left;
-position: relative;
-}
-
-.texto-destaque {
-margin-top: 100px;
-text-align: center;
-}
-
-.texto-destaque strong {
-color: #646464;
-}
-
-.texto-destaque h1 {
-text-transform: uppercase;
-font-size: 30px;
-color: #818181;
-}
-
-.texto-destaque p {
-font-size: 15px;
-color: #9a9a9a;
-}
-
-.col-3 {
-text-align: center;
-padding-left: 15px;
-padding-right: 15px; 
-width: 29%;
-float: left;
-position: relative;
-}
-
-.bloco-texto {
-margin-top: 10em;
-}
-
-.invite-text{
-font-size: 24px;
-text-transform: uppercase;
-color: #fff;
-text-decoration: none;
-}
-
-.col-3 img{
-cursor: pointer;
-}
-
-.col-2 {
-float: left;
-width: 25%;
-text-align: center;
-}
-
-.col-2 img {
-cursor: pointer;
-margin: 0 auto;
-padding-top: 1em;
-vertical-align: middle;
-}
-
-.col-2 img:hover {
-margin-top: 10px!important;
-position: relative!important;
-}
-
-h3 {
-font-weight: normal!important;
-}
-
-.col-4 {
-float: left;
-width: 25%;
-text-align: left;
-}
-
-.col-4 img {
-cursor: pointer;
-margin: 0 auto;
-padding-top: 4em;
-vertical-align: middle;
-/*mudar a posição do paddin para 4 ou menos*/
-}
-
-.footer h3 {
-text-align: left;
-}
-
-.footer {
-background-image: url('../img/footer.png');
+h1, h2, h3{
+font-family: 'PT Serif', serif;
 color: #ffffff;
 }
 
-.footer-2 {
+h1 strong{
+padding-top: 4em;
+font-family: 'Secular One', sans-serif;
+}
+
+nav{
 background-image: url('../img/footer2.png');
-color: #c1c1c1;
-height: 5px;
+display: flex;
+flex-direction: column;
+align-items: center;
+background-color: #252323;
 }
 
-
-.footer p {
-width: 90%;
-text-align: left;
+nav > a {
+text-decoration: none;
+color: #ffffff;
+font-weight: 800;
+font-size: 32px;
 }
 
-.footer-2 p {
-padding: 10px;
+nav ul{
+display: flex;
+flex-direction: column;
+align-items: center;
+list-style: none;
+padding: 0;
+width: 100%;
 }
 
-.local:before, .emailico:before, .telefoneico:before {
-content: '';
-width:  17px;
-height: 24px;
+nav ul li{
+text-align: right;
+width: 40%;
+}
+
+nav ul li a {
 display: inline-block;
-float: left;
-background-repeat: no-repeat;
-padding-left: 5px;
+padding: 10px 0;
+width: 100%;
+text-decoration: none;
+color: #ffffff;
 }
 
-.local:before {
-background-image: url('../img/local.png');
-} 
+.botao{
+color: #ffffff;
+text-decoration: none;
+padding: 10px 30px;
+background-color: rgb(15, 97, 19);
+font-size: .9em;
+border-radius: 3px;
+}
 
-.emailico:before {
-background-image: url('../img/emailico.png');
-} 
- 
-.telefoneico:before {
-background-image: url('../img/telefoneico.png');
+header .botao:hover{
+margin-top: 1px!important;
+position: relative!important;
+background-color: #c51e1e;
+}
+
+header{
+display: flex;
+flex-direction: column;
+align-items: center;
+background-color:#131212;
+text-align: center;
+padding:10px 10px 20px 20px;
+color: #ffffff;
+}
+
+header h1{
+color: #2d8f71;
+margin-top: -56px;
+font-size: 93px;
+}
+
+header p{
+margin-bottom: 1em;
+max-width: 1000px;
+font-size: 30px;
+}
+
+footer{
+font-size: 15px;
+text-align: left;
+padding-top: 20px;
+padding-left: 64px;
+background-image: url('../img/footer2.png');
+color: #ffffff
+}
+
+@media screen and (min-width:768px){
+   nav{
+      flex-direction: row;
+      justify-content: space-around;
+   }   
+   nav ul{
+      flex-direction: row;
+      width: 70%;
+   }  
+   header{
+      height: 746px;
+      height: 79.3vh;
+      justify-content: center;
+      min-width: 250px;
+   }
+   footer{
+      height: 600px;
+      height: 8vh;
+      justify-content: center;
+      min-width: 250px;
+   }
 }
