--- a/css/global.css
+++ b/css/global.css
@@ -24,7 +24,7 @@ a:hover {
 }
 
 .button {
-  text-transform: lowercase;
+  text-transform: capitalize;
   font-weight: 500;
   padding-left: 1.4rem;
   padding-right: 1.4rem;
@@ -38,4 +38,8 @@ a:hover {
 .button-primary:hover {
   background-color: var(--bt-color);
   border-color: var(--bt-color);
+}
+.nav-tabs .nav-item.show .nav-link, .nav-tabs .nav-link.active{
+      background-color: #2a7760;
+      color: #9c9797;
 }
